tooling/nargo_cli/tests/snapshots/execution_success/double_neg_cond_global_var/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
global G_A: bool = false;

fn main(a: Field) -> pub Field {
    if if !G_A {
        if !G_A {
            a as u128
        } else {
            a as u128
        }
    } else {
        a as u128
    }
        <= (a as u128) {
        --a
    } else {
        --a
    }
}
