tooling/nargo_cli/tests/snapshots/execution_success/double_neg_cond_global_var/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62QsQ2AMAwEMWIgO7aJ3bEKEc7+IyCUFFEKGjjp9cVLVzwsDeiZWXsfvRl3kcgpiOnE5MUURctuZKSmVzLmMLHsxTM6CQdVda7YGF34DYL/XPi4tuGLGXjZbjcKT/NEAQAA",
  "debug_symbols": "lZBBCoMwEEXvknUWLiKlXqUUGeMogSEJYyIU8e4dxbS20EVXkz8v70OyqB67PLbOD2FSzW1RHTsiN7YULCQXvGyXVasS28SIslInLlYERp9U4zORVjNQ3i9NEfw+E7DQSiv0vUwpHBzhdlr1265+q8ZcDtmY60uv//Dr4tfVh3+XBNbx94tnYAcd4RGH7O2JpkcspPxY5GCxz4xb086k+wk=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
