tooling/nargo_cli/tests/snapshots/execution_success/double_neg_cond_global_var/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v1: Field):
    (no terminator instruction)
}
[double_neg_cond_global_var] Circuit output: 0x01
